Fixed event link on mobile view

--- a/assets/sass/_tribe.scss
+++ b/assets/sass/_tribe.scss
@@ -221,7 +221,9 @@
   padding-right: 20px!important;
 }
 
-
+h3.tribe-events-calendar-month-mobile-events__mobile-event-title.tribe-common-h7 {
+  margin-bottom: 14px;
+}
 
 
 
